src/tests/valid/ivdserial/property.ivdserial
=================================Element========================================
Path: anonymous-0-HORRIBLY-MAANGLED
------------------------------------------Body
-----------------------------State default
------------Attr Key: align-a
Property: align-center
