src/tests/errors/ivdserial/tabserrorhandler.ivdserial
The IVD compiler has encountered the following error:
Syntax error on line 19:
    align-x: center;
             ^
Malformed attribute body, expected Property.

---------------------------------------------------
=================================Element========================================
Path: anonymous-0-HORRIBLY-MAANGLED
------------------------------------------Body
-----------------------------State default
